main/default/objects/Opportunity_Product_Sales_Product__c/fields/Sales_Product__c.field-meta.xml
<CustomField>
    <fullName>Sales_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Product</label>
    <referenceTo>SalesProduct__c</referenceTo>
    <relationshipLabel>Sales Products</relationshipLabel>
    <relationshipName>Sales_Products</relationshipName>
    <type>Lookup</type>
</CustomField>