main/default/objects/Opportunity_Product_Sales_Product__c/fields/Sales_Reporting_Name__c.field-meta.xml
<CustomField>
    <fullName>Sales_Reporting_Name__c</fullName>
    <label>Sales Reporting Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>