main/default/objects/Opportunity_Product_Sales_Product__c/fields/SPC_Product__c.field-meta.xml
<CustomField>
    <fullName>SPC_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SPC Product</label>
    <referenceTo>SPC_Product__c</referenceTo>
    <relationshipLabel>Sales Products</relationshipLabel>
    <relationshipName>SPC_Products</relationshipName>
    <type>Lookup</type>
</CustomField>