main/default/objects/Opportunity_Product_Sales_Product__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SPC_Product__c</columns>
    <columns>Sales_Reporting_Name__c</columns>
    <columns>Sales_Product__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>